build: move most of the scripts to scripts dir

--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Install Boost
         if: steps.cache-boost.outputs.cache-hit != 'true'
-        run: ./install-boost.sh
+        run: ./scripts/install-boost.sh
 
       - name: Check submodules
         run: git submodule > submodule-status
