--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -31,7 +31,7 @@ jobs:
           submodules: recursive
 
       - name: Install dependency
-        run: ./action-install-linux.sh
+        run: ./scripts/action-install-linux.sh
 
       - name: Build and test
         run: make test
